tests/snapshots/integration_tests__snapshot_tests__array_init_and_copy_inverse.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_and_copy_inverse.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) Z) (Read_Int_Int b+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int b+1 i+1 (Read_Int_Int a+1 (- N (+ i+1 1)))) (- N (+ i+0 1))) (Read_Int_Int b+1 (- N (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+1 1))) (Read_Int_Int a+0 (- N (+ i+1 1))))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) i+0) (Read_Int_Int a+0 (- N (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 0) (Read_Int_Int b+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+2 1))) (Read_Int_Int a+0 (- N (+ i+2 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+3 1))) (Read_Int_Int a+0 (- N (+ i+3 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N Z)) (Read_Int_Int a+0 (- N Z)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 2) (Read_Int_Int b+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+4 1))) (Read_Int_Int a+0 (- N (+ i+4 1))))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 1) (Read_Int_Int b+0 1))",
    ],
}
