tests/snapshots/integration_tests__snapshot_tests__array_init_both_ends_multiple_sum.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_both_ends_multiple_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) N) (Read_Int_Int b+0 N))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N))",
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) 0) (Read_Int_Int b+0 0))",
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) (- N (+ i+0 1))) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) 1) (Read_Int_Int b+0 1))",
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) sum+4) (Read_Int_Int b+0 sum+4))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int b+0 (- N (+ i+0 1)) i+0) (- N (+ i+1 1))) (Read_Int_Int b+0 (- N (+ i+1 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 0) (Read_Int_Int a+0 0))",
    ],
}
