tests/snapshots/integration_tests__snapshot_tests__array_init_both_ends_simpl.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_both_ends_simpl.vmt",
    status: Panic,
    used_instantiations: [],
}
